--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -9,6 +9,14 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
         <li class="nav-item">
+          <%= link_to "Secrets", secrets_path, class:"nav-link active" %>
+        </li>
+
+        <li class="nav-item">
+          <%= link_to "Adventures", adventures_path, class:"nav-link active" %>
+        </li>
+
+        <li class="nav-item">
           <%= link_to "Profile", profiles_path, class:"nav-link active" %>
           <!-- <a class="nav-link active" aria-current="page" href="/profiles">Profiles</a> -->
         </li>
