--- a/app/views/examples/show.html.erb
+++ b/app/views/examples/show.html.erb
@@ -1,2 +1,5 @@
 <h1>Examples#show</h1>
 <p>Find me in app/views/examples/show.html.erb</p>
+
+<!-- Devise user authentication -->
+<%= link_to "Sign in", new_user_session_path %>
