--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -10,8 +10,8 @@
   </p>
 
   <p>
-    <strong>Body:</strong>
-    <%= secret.body %>
+    <strong>Description</strong>
+    <%= secret.Description %>
   </p>
 
 </div>
