--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,10 @@
     <%= yield :head %>
 
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= favicon_link_tag 'favicon.ico' %>
+  <!--  <link rel="apple-touch-icon" href="/icon.png">-->
+    <!--<%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>-->
+    <%= stylesheet_link_tag "shared"%>
 
     <!-- CSS done with Bootstrap https://getbootstrap.com/docs/5.3/components/navbar/ -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -31,22 +31,20 @@
   </head>
 
   <body>
+    <div id="TopBorder"></div>
 
-    <%= render "home/header" %>
-
+    <% if user_signed_in? %>
+      <%= render "home/header" %>
+    <% end %>
     <!-- Devise authentication -->
     <!-- https://www.monterail.com/blog/how-to-set-up-user-authentication-and-authorization-in-ruby-on-rails -->
-    <% if alert %>
-      <%= render "home/alert" %>
-    <% end %>
     <% if notice %>
-      <%= render "home/notice" %>
-    <% end %>
-
+      <p id="SignIn_OutNotice"><%= notice %></p>
+    <% end %>  
     <div class="container">
       <%= yield %>
     </div>
-
+    
     <!-- JavaScript necessary for Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
