Renamed everything to body

--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -25,8 +25,8 @@
     <%= form.file_field :"Image of Spot:", :accept => 'image/jpeg,image/png'%>
   </div><br>
   <div>
-    <%= form.label :"Description:", style: "display: block" %>
-    <%= form.text_area :Description %>
+    <%= form.label :"body:", style: "display: block" %>
+    <%= form.text_area :body %>
   </div>
 
   
