--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -12,20 +12,20 @@
   <% end %>
 
   <div>
-    <%= form.label :"User:", style: "display: block" %>
+    <%= form.label :User, style: "display: block" %>
     <%= form.text_field :user_id %>
   </div>
 
   <div>
-    <%= form.label :"Name:", style: "display: block" %>
+    <%= form.label :Name, style: "display: block" %>
     <%= form.text_field :name %>
   </div>
   <div>
-    <%= form.label :"Pictures:", style: "display: block"%>
+    <%= form.label :Pictures, style: "display: block"%>
     <%= form.file_field :"Image of Spot:", :accept => 'image/jpeg,image/png'%>
   </div><br>
   <div>
-    <%= form.label :"Body", style: "display: block" %>
+    <%= form.label :Body, style: "display: block" %>
     <%= form.text_area :body %>
   </div>
 
