--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -25,8 +25,8 @@
     <%= form.file_field :"Image of Spot:", :accept => 'image/jpeg,image/png'%>
   </div><br>
   <div>
-    <%= form.label :Body, id:"Body", style: "display: block" %>
-    <%= form.text_area :body %>
+    <%= form.label :Body, style: "display: block" %>
+    <%= form.text_area :body , id:"Body" %>
   </div>
 
   
