--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div>
     <%= form.label :User, style: "display: block" %>
-    <%= form.text_field :user_id %>
+    <%= form.text_field :user_id,id:"User" %>
   </div>
 
   <div>
     <%= form.label :Name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, id:"Name" %>
   </div>
   <div>
     <%= form.label :Pictures, style: "display: block"%>
