--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,21 +26,61 @@
     </style>
 </head>
 <body>
-    <h1>SECRET SPOTS</h1>
+    <h1>Secret Spots</h1>
     <div id="map"></div>
 
     <script>
-        // Initialize Google Map
+        let map;
+        let markers = [];
+
         function initMap() {
-            const map = new google.maps.Map(document.getElementById("map"), {
-                center: { lat: -34.397, lng: 150.644 },
-                zoom: 8,
+            map = new google.maps.Map(document.getElementById("map"), {
+                center: { lat: 50.8503, lng: 4.3517 }, 
+                zoom: 12,
             });
+
+            fetchAndUpdateMarkers();
+
+            setInterval(fetchAndUpdateMarkers, 5000); // had to add refresh every 5 seconds, to look for new added secrets and display them
+        }
+
+        function fetchAndUpdateMarkers() {
+            fetch("<%= secrets_map_data_path %>")
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error(`Network response was not ok: ${response.statusText}`);
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    markers.forEach(marker => marker.setMap(null));
+                    markers = [];
+
+                    data.forEach(secret => {
+                        const marker = new google.maps.Marker({
+                            position: {
+                                lat: parseFloat(secret.latitude),
+                                lng: parseFloat(secret.longitude),
+                            },
+                            map: map,
+                            title: secret.name,
+                        });
+
+                        marker.addListener("click", () => {
+                            window.location.href = `/secrets/${secret.id}`;
+                        });
+
+                        markers.push(marker);
+                    });
+                })
+                .catch(error => {
+                    console.error('Error fetching secrets:', error);
+                });
         }
     </script>
-    <script async
-    src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY'] %>&callback=initMap">
-</script>
 
+    <script async
+        src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY'] %>&callback=initMap">
+    </script>
 </body>
 </html>
