--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -1,7 +1,8 @@
+
 <div id="<%= dom_id secret %>">
   <p>
     <strong>User:</strong>
-    <%= secret.user_id %>
+    <%= User.find(secret.user_id).email %>
   </p>
 
   <p>
