--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag "newSecret" %>
+<div class="newSecretForm">
 <% content_for :title, "New secret" %>
 
 <h1>New secret</h1>
@@ -6,6 +8,7 @@
 
 <br>
 
-<div>
+  <div>
   <%= link_to "Back to secrets", secrets_path %>
+  </div>
 </div>
