--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -55,7 +55,7 @@
       <div class="d-flex navbar-text">
         <% if user_signed_in? %> 
           <div> Welcome <%= current_user.email %> </div> 
-          <%= button_to "Profile", edit_user_registration_path %>
+          <%= button_to "Profile", edit_user_registration_path, method: :get %>
           <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
         <% else %>
           <%= button_to "Sign in", new_user_session_path %> 
