--- a/app/views/secrets/show.html.erb
+++ b/app/views/secrets/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @secret %>
 
 <div>
-  <%= link_to "Edit this secret", edit_secret_path(@secret) %> |
+  <%= if @permission then link_to "Edit this secret", edit_secret_path(@secret) end %>
   <%= link_to "Back to secrets", secrets_path %>
 
-  <%= button_to "Destroy this secret", @secret, method: :delete %>
+  <%= if @permission then button_to "Destroy this secret" , @secret, method: :delete end %>
 </div>
