Work on Active Storage + previews of images

--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -10,20 +10,20 @@
       </ul>
     </div>
   <% end %>
-
+<!--
   <div>
     <%= form.label :User, style: "display: block" %>
-    <%= form.text_field :user_id, id:"User" %>
+    <%= form.label :user_id, id:"User" %>
   </div>
-
+-->
   <div>
     <%= form.label :Name, style: "display: block" %>
     <%= form.text_field :name, id:"Name" %>
   </div>
-  <div>
-    <%= form.label :Pictures, style: "display: block"%>
-    <%= form.file_field :"Image of Spot:", :accept => 'image/jpeg,image/png'%>
-  </div><br>
+
+  <!-- https://www.youtube.com/watch?v=nqAnftA8LbA -->
+  <%= render "image_preview", form: form, secret: secret %>
+
   <div>
     <%= form.label :Body, style: "display: block" %>
     <%= form.text_area :body , id:"Body" %>
