--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -1,12 +1,18 @@
 <div id="<%= dom_id secret %>">
+
+  <!--
   <p>
     <strong>User:</strong>
     <%= secret.user_id %>
   </p>
-
+-->
   <p>
     <strong>Name:</strong>
     <%= secret.name %>
+  </p>
+
+  <p>
+    <%= image_tag(secret.Pictures, class: "secret-pictures") %>
   </p>
 
   <p>
