Didn't stage the changes last in the last commit...

--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -12,9 +12,7 @@
     <%= secret.name %>
   </p>
 
-  <p>
-    <%= image_tag(secret.Pictures, class: "secret-pictures") %>
-  </p>
+  <img src=<% secret.Pictures%>, class:"secret-pictures">
 
   <p>
     <strong>Body:</strong>
