Work on active storage + language support

--- a/app/views/secrets/_List.html.erb
+++ b/app/views/secrets/_List.html.erb
@@ -6,7 +6,7 @@
   <% @secrets.each do |secret| %>
     <%= render secret %>
     <p>
-      <%= link_to "Show this secret", secret %>
+      <%= link_to t(:show), secret %>
     </p>
   <% end %>
 </div>
