--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -1,21 +1,21 @@
+<div id="<%= dom_id secret %>" style="border-style:solid">
 
-<div id="<%= dom_id secret %>">
-
-  <!--
   <p>
-    <strong>User:</strong>
+    <strong><%= t :user %></strong>
     <%= User.find(secret.user_id).email %>
   </p>
--->
+
   <p>
-    <strong>Name:</strong>
+    <strong><%= t :name %></strong>
     <%= secret.name %>
   </p>
 
-  <img src=<% secret.Pictures%>, class:"secret-pictures">
+  <p>
+    <img src="test.png" />
+  </p>
 
   <p>
-    <strong>Body:</strong>
+    <strong><%= t :body %></strong>
     <%= secret.body %>
   </p>
 
