--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -25,7 +25,11 @@
   </div>
 
   <!-- https://www.youtube.com/watch?v=nqAnftA8LbA -->
-  <%= render "image_preview", form: form, secret: secret %>
+  <%= # render "image_preview", form: form, secret: secret %>
+  <div>
+    <%= # form.label :image %>
+    <%= # form.file_field :image %>
+  </div>
 
   <div>
     <%= form.label :Description, style: "display: block" %>
