--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -1,21 +1,21 @@
 <div id="<%= dom_id secret %>" style="border-style:solid">
 
   <p>
-    <strong><%= t :user %></strong>
+    <strong><%= t('.user') %></strong>
     <%= User.find(secret.user_id).email %>
   </p>
 
   <p>
-    <strong><%= t :name %></strong>
+    <strong><%= t('.name') %></strong>
     <%= secret.name %>
   </p>
 
   <p>
-    <img src="test.png" />
+    <%= secret.image %>
   </p>
 
   <p>
-    <strong><%= t :body %></strong>
+    <strong><%= t('.body') %></strong>
     <%= secret.body %>
   </p>
 
