Finishing (local) active storage implementation

--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -1,5 +1,3 @@
-
-
 <%= form_with(model: secret) do |form| %>
   <% if secret.errors.any? %>
     <div style="color: red">
@@ -13,32 +11,26 @@
     </div>
   <% end %>
 
-
-  <!--<div>
-    <%= form.label :"User:", style: "display: block" %>
-    <%= form.text_field :user_id,id:"User" %>
-  </div>-->
-
   <div>
     <%= form.label :"Name of secret:", style: "display: block" %>
     <%= form.text_field :name, id: "Name" %>
   </div>
 
   <!-- https://www.youtube.com/watch?v=nqAnftA8LbA -->
-  <%= # render "image_preview", form: form, secret: secret %>
+  <!-- https://www.youtube.com/watch?v=1cw6qO1EYGw -->
+
   <div>
-    <%= # form.label :image %>
-    <%= # form.file_field :image %>
+    <%= form.label :image %>
+    <%= form.file_field :image %>
   </div>
 
   <div>
     <%= form.label :Description, style: "display: block" %>
     <%= form.text_area :body , id:"Body" %>
   </div>
-
   
   <div>
     <%= form.submit%>
   </div>
-<% end %>
 
+<% end %>
