--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -10,9 +10,8 @@
     <%= secret.name %>
   </p>
 
-  <p>
-    <%= secret.image %>
-  </p>
+  <!-- https://www.youtube.com/watch?v=1cw6qO1EYGw -->
+  <%= link_to image_tag(secret.image_as_thumbnail), secret.image if secret.image.attached? %>
 
   <p>
     <strong><%= t('.body') %></strong>
