--- a/app/views/adventures/edit.html.erb
+++ b/app/views/adventures/edit.html.erb
@@ -7,6 +7,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this adventure", @adventure %> |
-  <%= link_to "Back to adventures", adventures_path %>
+  <%= link_to t('secrets.show-link'), @adventure %> |
+  <%= link_to t('secrets.back-link'), adventures_path %>
 </div>
