--- a/app/views/secrets/_List.html.erb
+++ b/app/views/secrets/_List.html.erb
@@ -1,14 +1,10 @@
-<% content_for :title, "Secrets" %>
-
-<h1>Secrets:</h1>
-
-<%= link_to t('.new') ,  if user_signed_in? then new_secret_path else new_user_session_path end  %>
+<%= link_to t('secrets.new-link') ,  if user_signed_in? then new_secret_path else new_user_session_path end  %>
 
 <div id="secrets">
   <% @secrets.each do |secret| %>
     <%= render secret %>
     <p>
-      <%= link_to t('.show') , secret %>
+      <%= link_to t('secrets.show-link') , secret %>
     </p>
   <% end %>
 </div>
