--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: secret) do |form| %>
   <% if secret.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(secret.errors.count, "error") %> prohibited this secret from being saved:</h2>
+      <h2><%= t('.messages.errors', count: secret.errors.count)%></h2>
 
       <ul>
         <% secret.errors.each do |error| %>
@@ -12,12 +12,9 @@
   <% end %>
 
   <div>
-    <%= form.label :"Name of secret:", style: "display: block" %>
+    <%= form.label :"Name of secret:", t('global.name'), style: "display: block" %>
     <%= form.text_field :name, id: "Name" %>
   </div>
-
-  <!-- https://www.youtube.com/watch?v=nqAnftA8LbA -->
-  <!-- https://www.youtube.com/watch?v=1cw6qO1EYGw -->
 
   <div>
     <%= form.label :image %>
@@ -25,12 +22,12 @@
   </div>
 
   <div>
-    <%= form.label :Description, style: "display: block" %>
+    <%= form.label :Description, t('global.body'), style: "display: block" %>
     <%= form.text_area :body , id:"Body" %>
   </div>
   
   <div>
-    <%= form.submit%>
+    <%= form.submit t('.submit') %>
   </div>
 
 <% end %>
