--- a/app/views/secrets/edit.html.erb
+++ b/app/views/secrets/edit.html.erb
@@ -1,12 +1,12 @@
-<% content_for :title, "Editing secret" %>
+<% content_for :title, t('.title') %>
 
-<h1>Editing secret</h1>
+<h1><%= t('.edit') %></h1>
 
 <%= render "form", secret: @secret %>
 
 <br>
 
 <div>
-  <%= link_to "Show this secret", @secret %> |
-  <%= link_to "Back to secrets", secrets_path %>
+  <%= link_to t('secrets.show-link'), @secret %> |
+  <%= link_to t('secrets.back-link'), secrets_path %>
 </div>
