--- a/app/views/secrets/new.html.erb
+++ b/app/views/secrets/new.html.erb
@@ -1,14 +1,15 @@
 <%= stylesheet_link_tag "newSecret" %>
+<% content_for :title, t('.title') %>
+
 <div class="newSecretForm">
-<% content_for :title, "New secret" %>
 
-<h1>New secret</h1>
+  <h1><%= t('.new') %></h1>
 
-<%= render "form", secret: @secret %>
+  <%= render "form", secret: @secret %>
 
-<br>
+  <br>
 
   <div>
-  <%= link_to "Back to secrets", secrets_path %>
+  <%= link_to t('secrets.back-link'), secrets_path %>
   </div>
 </div>
