--- a/app/views/secrets/show.html.erb
+++ b/app/views/secrets/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @secret %>
 
 <div>
-  <%= if @permission then link_to "Edit this secret", edit_secret_path(@secret) end %>
-  <%= link_to "Back to secrets", secrets_path %>
+  <%= if @permission then link_to t('secrets.edit-link'), edit_secret_path(@secret) end %>
+  <%= link_to t('secrets.back-link'), secrets_path %>
 
-  <%= if @permission then button_to "Destroy this secret" , @secret, method: :delete end %>
+  <%= if @permission then button_to t('secrets.destroy-link') , @secret, method: :delete end %>
 </div>
