--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -1,12 +1,12 @@
 <div id="<%= dom_id secret %>" style="border-style:solid">
 
   <p>
-    <strong><%= t('.user') %></strong>
+    <strong><%= t('global.user') %></strong>
     <%= User.find(secret.user_id).email %>
   </p>
 
   <p>
-    <strong><%= t('.name') %></strong>
+    <strong><%= t('global.name') %></strong>
     <%= secret.name %>
   </p>
 
@@ -14,7 +14,7 @@
   <%= link_to image_tag(secret.image_as_thumbnail), secret.image if secret.image.attached? %>
 
   <p>
-    <strong><%= t('.body') %></strong>
+    <strong><%= t('global.body') %></strong>
     <%= secret.body %>
   </p>
 
