--- a/app/views/secrets/show.html.erb
+++ b/app/views/secrets/show.html.erb
@@ -1,10 +1,39 @@
-
-
 <%= render @secret %>
 
 <div>
   <%= if @permission then link_to "Edit this secret", edit_secret_path(@secret) end %>
   <%= link_to "Back to secrets", secrets_path %>
 
-  <%= if @permission then button_to "Destroy this secret" , @secret, method: :delete end %>
+  <%= if @permission then button_to "Destroy this secret", @secret, method: :delete end %>
 </div>
+
+<% if @secret.comments.any? %>
+  <h3>Comments</h3>
+  <% @secret.comments.each do |comment| %>
+    <div>
+      <p><strong><%= comment.user.email %>:</strong> <%= comment.content %>
+        <% if comment.edited %>
+          <em> (edited)</em>
+        <% end %></p>
+      <p><em>Posted on <%= comment.created_at.strftime('%B %d, %Y at %I:%M %p') %></em></p>
+
+      <% if comment.user == current_user %>
+        <%= link_to 'Edit', edit_secret_comment_path(@secret, comment) %> |
+        <%= button_to 'Delete Comment', secret_comment_path(@secret, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' } %>
+      <% end %>
+    </div>
+  <% end %>
+<% else %>
+  <p>No comments yet. Be the first to comment!</p>
+<% end %>
+
+<h3>Add a New Comment</h3>
+<%= form_with(model: [@secret, Comment.new], local: true) do |form| %>
+  <div>
+    <%= form.label :content, 'Your Comment' %>
+    <%= form.text_area :content, rows: 3 %>
+  </div>
+  <div>
+    <%= form.submit 'Post Comment' %>
+  </div>
+<% end %>
