comments creating, editing, deleting done

--- a/app/views/secrets/show.html.erb
+++ b/app/views/secrets/show.html.erb
@@ -18,8 +18,10 @@
       <p><em>Posted on <%= comment.created_at.strftime('%B %d, %Y at %I:%M %p') %></em></p>
 
       <% if comment.user == current_user %>
-        <%= link_to 'Edit', edit_secret_comment_path(@secret, comment) %> |
-        <%= button_to 'Delete Comment', secret_comment_path(@secret, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' } %>
+        <div class="comment-actions">
+          <%= link_to 'Edit', edit_secret_comment_path(@secret, comment), class: "btn btn-link" %>
+          <%= button_to 'Delete', secret_comment_path(@secret, comment), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: "btn btn-link" %>
+        </div>
       <% end %>
     </div>
   <% end %>
