User profile work
Made some nice styling, also split the "profile page" into a page which just gives an overview, and a page which allows editing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,9 @@
 
   <body>
     <div id="TopBorder"></div>
+    <% if @show_header then%> 
       <%= render "home/header" %>
+    <%end %>
     <!-- Devise authentication -->
     <!-- https://www.monterail.com/blog/how-to-set-up-user-authentication-and-authorization-in-ruby-on-rails -->
     <% if notice %>
