--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,53 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%= stylesheet_link_tag "UserProfile" %>
+<%= stylesheet_link_tag "UserProfileEdit" %>
+
+<div id="UserProfileOverview">
+<h2 id="title">Edit Profile</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :"email:" %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
-
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+    <%= f.label :"current_password:" %> 
+    <!-- if we submitted an incorrect form, the already filled in fields should stay filled-->
+    <% if @account_params then %>
+      <%= f.password_field :current_password, autocomplete: "current-password", value: @account_params[:current_password] %>
+    <%else%>
+      <%= f.password_field :current_password, autocomplete: "current-password" %>
+    <%end%>
+    <i>(we need your current password to confirm your changes)</i>
   </div>
+  <div id="passwordEdit">
+    <div class="field">
+      <%= f.label :"password:" %> 
+      <%= f.password_field :password, autocomplete: "new-password" %>
+      <i>(leave blank if you don't want to change it)</i>
+      <% if @minimum_password_length %>
+       <br> <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <div class="field" id="confirmation">
+      <%= f.label :"password_confirmation:" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
+  
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Update profile" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<div id="cancel"> <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+<div id="return"><button onclick="history.back()">Back</button></div>
+</div>
