--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -18,10 +18,13 @@
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
   <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
 <% end %>
-
+</div>
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+    <div class="OmniAuth">
+      <div ><%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider).delete_suffix("Oauth2")}", omniauth_authorize_path(resource_name, provider), data: { turbo: false },class:"omniAuthButton" %></div>
+      <div class="inside"><%= image_tag(if provider == :github then "github.png" else "google.png"end , :alt => "google Image", width:"50", height:"50",position:"relative")  %></div>
+    </div>
   <% end %>
 <% end %>
-</div>
+
