--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag "navbar" %>
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
   <div class="container-fluid">
     <%= link_to "SecretSpots", root_path, class:"navbar-brand" %>
@@ -65,12 +66,12 @@
       
       <div class="d-flex navbar-text">
         <% if user_signed_in? %> 
-          <div> Welcome <%= current_user.email %> </div> 
-          <%= button_to "Profile", edit_user_registration_path, method: :get %>
+          <div> Welcome, <%= current_user.email %> </div> 
+          <%= button_to "Profile", user_view_path, method: :get %>
           <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
         <% else %>
-          <%= button_to "Sign in", new_user_session_path %> 
-          <%= button_to "Log in", new_user_registration_path %>
+          <%= button_to "Log in", new_user_session_path,method: :get %> 
+          <%= button_to "Sign up", new_user_registration_path,method: :get %>
         <% end %>
       </div>
 
