Adding profile pictures logic and html (no css styling yet, looks ugly ngl

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -73,7 +73,11 @@
       <div class="d-flex navbar-text">
         <% if user_signed_in? %> 
           <div> Welcome <%= current_user.email %> </div> 
-          <%= button_to "Profile", edit_user_registration_path, method: :get %>
+          <% if current_user.profile_picture.attached? %>
+            <%= image_tag(current_user.profile_picture) %>
+          <% else %>
+            <%= button_to "Profile", edit_user_registration_path, method: :get %>
+          <% end %>
           <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
         <% else %>
           <%= button_to "Sign in", new_user_session_path %> 
