--- a/app/views/secrets/show.html.erb
+++ b/app/views/secrets/show.html.erb
@@ -11,6 +11,13 @@
   <h3>Comments</h3>
   <% @secret.comments.each do |comment| %>
     <div>
+
+      <% if comment.user.profile_picture.attached? %>
+        <%= link_to image_tag(comment.user.profile_picture), edit_user_registration_path, method: :get  %>
+      <% else %>
+        <%= link_to image_tag("/empty-profile-picture.png"), edit_user_registration_path, method: :get  %>
+      <% end %>
+
       <p><strong><%= comment.user.email %>:</strong> <%= comment.content %>
         <% if comment.edited %>
           <em> (edited)</em>
