--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -77,9 +77,9 @@
 
           
           <% if current_user.profile_picture.attached? %>
-            <%= link_to image_tag(current_user.profile_picture), user_path  %>
+            <%= link_to image_tag(current_user.profile_picture), edit_user_registration_path  %>
           <% else %>
-            <%= link_to image_tag("/empty-profile-picture.png"), user_path  %>
+            <%= link_to image_tag("/empty-profile-picture.png"), edit_user_registration_path  %>
           <% end %>
 
           <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
