adding user profile, adding username, editing username still TODO, usernames are links to user pages

--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -1,8 +1,8 @@
-<div id="<%= dom_id secret %>" style="border-style:solid">
+<div id="<%= dom_id(secret) %>" style="border-style:solid">
 
   <p>
     <strong><%= t('global.user') %></strong>
-    <%= User.find(secret.user_id).email %>
+    <%= link_to User.find(secret.user_id).username, user_path(User.find(secret.user_id)) %>
   </p>
 
   <p>
@@ -10,7 +10,6 @@
     <%= secret.name %>
   </p>
 
-  <!-- https://www.youtube.com/watch?v=1cw6qO1EYGw -->
   <%= link_to image_tag(secret.image_as_thumbnail), secret.image if secret.image.attached? %>
 
   <p>
