--- a/app/views/secrets/show.html.erb
+++ b/app/views/secrets/show.html.erb
@@ -18,11 +18,12 @@
         <%= link_to image_tag("/empty-profile-picture.png"), edit_user_registration_path, method: :get  %>
       <% end %>
 
-      <p><strong><%= comment.user.email %>:</strong> <%= comment.content %>
+      <p><strong><%= link_to comment.user.username, user_path(comment.user) %>:</strong> <%= comment.content %>
         <% if comment.edited %>
           <em> (edited)</em>
-        <% end %></p>
-      <p><em>Posted on <%= comment.created_at.strftime('%B %d, %Y at %I:%M %p') %></em></p>
+        <% end %>
+      </p>
+      <em>Posted on <%= comment.created_at.strftime('%B %d, %Y at %I:%M %p') %></em></p>
 
       <% if comment.user == current_user %>
         <div class="comment-actions">
