--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -73,7 +73,7 @@
       <div class="d-flex navbar-text">
         <% if user_signed_in? %> 
           
-          <div> Welcome <%= current_user.email %> </div>
+          <div> Welcome <%= current_user.username %> </div>
 
           
           <% if current_user.profile_picture.attached? %>
@@ -81,6 +81,8 @@
           <% else %>
             <%= link_to image_tag("/empty-profile-picture.png"), edit_user_registration_path  %>
           <% end %>
+          
+          <%= link_to 'My Profile', user_path(current_user), class: "btn btn-primary ms-3" %>
 
           <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
 
