--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag "navbar" %>
+<%= stylesheet_link_tag "header" %>
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
   <div class="container-fluid">
     <%= link_to "SecretSpots", root_path, class:"navbar-brand" %>
@@ -77,14 +77,14 @@
           <div> Welcome <%= current_user.email %> </div>
           
           <% if current_user.profile_picture.attached? %>
-            <%= link_to image_tag(current_user.profile_picture), edit_user_registration_path  %>
+            <%= link_to image_tag(current_user.profile_picture), user_view_path, method: :get  %>
           <% else %>
-            <%= link_to image_tag("/empty-profile-picture.png"), edit_user_registration_path  %>
+            <%= link_to image_tag("/empty-profile-picture.png"), user_view_path, method: :get  %>
           <% end %>
 
 
 
-          <%= button_to "Profile", user_view_path, method: :get %>
+          <!--<%= button_to "Profile", user_view_path, method: :get %>-->
 
           <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
 
